--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>Rinterio</title>
         <!-- google font -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -27,5 +27,119 @@
         />
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body></body>
+    <body class="bg-gradient-to-r from-rgb(255, 255, 255) to-rgba(255, 255, 255, 0)">
+        <!-- header start -->
+        <header>
+            <nav class="w-11/12 mx-auto">
+                <div class="p-0 navbar">
+                    <div class="navbar-start">
+                        <a href="#" class="  mx-4 px-2 py-1 text-center bg-[#ABEF5F] rounded-full"
+                            ><i class="fa-solid fa-arrow-right -rotate-45"></i>
+                        </a>
+                        <h3 class="text-3xl tracking-wider font-bold text-[#212121]">Rinterio</h3>
+                    </div>
+                    <div class="hidden navbar-center lg:flex">
+                        <ul
+                            class="px-1 text-lg font-medium menu menu-horizontal"
+                        >
+                            <li
+                                class="transition duration-300 ease-in-out hover:text-primary"
+                            >
+                                <a>Home</a>
+                            </li>
+                            <li
+                                class="transition duration-300 ease-in-out hover:text-primary"
+                            >
+                                <a>Services</a>
+                            </li>
+                            <li
+                                class="transition duration-300 ease-in-out hover:text-primary"
+                            >
+                                <a>Portfolio</a>
+                            </li>
+                            <li
+                                class="transition duration-300 ease-in-out hover:text-primary"
+                            >
+                                <a>Blogs</a>
+                            </li>
+                            <li
+                                class="transition duration-300 ease-in-out hover:text-primary"
+                            >
+                                <a>Contact Us</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="navbar-end">
+                        <button class="btn btn-[#ffffff] btn-circle">
+                            <svg
+                                xmlns="http://www.w3.org/2000/svg"
+                                class="w-5 h-5"
+                                fill="none"
+                                viewBox="0 0 24 24"
+                                stroke="currentColor"
+                            >
+                                <path
+                                    stroke-linecap="round"
+                                    stroke-linejoin="round"
+                                    stroke-width="2"
+                                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+                                />
+                            </svg>
+                        </button>
+                        <div class="flex items-center gap-5 text-lg">
+                            <button
+                                class="flex items-center gap-2 font-semibold text-gray-500"
+                            >
+                                <i class="fa-solid fa-cart-shopping btn btn-[#ffffff] btn-circle m-3"></i>
+                            </button>
+                            <button class="px-5 py-3 rounded-full text-black text-xl font-bold bg-[#ABEF5F]">
+                                <span>Book Consult</span>
+                                <a href="#" class=" text-white px-2 py-1 text-center bg-black rounded-full"
+                                ><i class="fa-solid fa-arrow-right -rotate-45"></i>
+                            </a>
+                            </button>
+                        </div>
+                        <div class="dropdown">
+                            <div
+                                tabindex="0"
+                                role="button"
+                                class="btn btn-ghost lg:hidden"
+                            >
+                                <i class="fa-solid fa-bars"></i>
+                            </div>
+                            <ul
+                                tabindex="0"
+                                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow text-lg font-medium right-0 gap-5"
+                            >
+                                <li
+                                    class="transition duration-300 ease-in-out hover:text-primary"
+                                >
+                                    <a>home</a>
+                                </li>
+                                <li
+                                    class="transition duration-300 ease-in-out hover:text-primary"
+                                >
+                                    <a>Services</a>
+                                </li>
+                                <li
+                                    class="transition duration-300 ease-in-out hover:text-primary"
+                                >
+                                    <a>Portfolio</a>
+                                </li>
+                                <li
+                                    class="transition duration-300 ease-in-out hover:text-primary"
+                                >
+                                    <a>Blogs</a>
+                                </li>
+                                <li
+                                    class="transition duration-300 ease-in-out hover:text-primary"
+                                >
+                                    <a>Contact Us</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav> 
+    </body>
 </html>
