navbar responsive end

--- a/index.html
+++ b/index.html
@@ -27,16 +27,24 @@
         />
         <script src="https://cdn.tailwindcss.com"></script>
     </head>
-    <body class="bg-gradient-to-r from-rgb(255, 255, 255) to-rgba(255, 255, 255, 0)">
+    <body
+        class="bg-gradient-to-r from-rgb(255, 255, 255) to-rgba(255, 255, 255, 0)"
+    >
         <!-- header start -->
         <header>
             <nav class="w-11/12 mx-auto">
                 <div class="p-0 navbar">
                     <div class="navbar-start">
-                        <a href="#" class="  mx-4 px-2 py-1 text-center bg-[#ABEF5F] rounded-full"
+                        <a
+                            href="#"
+                            class="mx-4 px-2 py-1 text-center bg-[#ABEF5F] rounded-full"
                             ><i class="fa-solid fa-arrow-right -rotate-45"></i>
                         </a>
-                        <h3 class="text-3xl tracking-wider font-bold text-[#212121]">Rinterio</h3>
+                        <h3
+                            class="text-3xl tracking-wider font-bold text-[#212121]"
+                        >
+                            Rinterio
+                        </h3>
                     </div>
                     <div class="hidden navbar-center lg:flex">
                         <ul
@@ -68,8 +76,6 @@
                                 <a>Contact Us</a>
                             </li>
                         </ul>
-                    </div>
-                    <div class="navbar-end">
                         <button class="btn btn-[#ffffff] btn-circle">
                             <svg
                                 xmlns="http://www.w3.org/2000/svg"
@@ -90,15 +96,25 @@
                             <button
                                 class="flex items-center gap-2 font-semibold text-gray-500"
                             >
-                                <i class="fa-solid fa-cart-shopping btn btn-[#ffffff] btn-circle m-3"></i>
+                                <i
+                                    class="fa-solid fa-cart-shopping btn btn-[#ffffff] btn-circle m-3"
+                                ></i>
                             </button>
-                            <button class="px-5 py-3 rounded-full text-black text-xl font-bold bg-[#ABEF5F]">
+                            <button
+                                class="px-5 py-3 rounded-full text-black text-xl font-bold bg-[#ABEF5F]"
+                            >
                                 <span>Book Consult</span>
-                                <a href="#" class=" text-white px-2 py-1 text-center bg-black rounded-full"
-                                ><i class="fa-solid fa-arrow-right -rotate-45"></i>
-                            </a>
+                                <a
+                                    href="#"
+                                    class="text-white px-2 py-1 text-center bg-black rounded-full"
+                                    ><i
+                                        class="fa-solid fa-arrow-right -rotate-45"
+                                    ></i>
+                                </a>
                             </button>
                         </div>
+                    </div>
+                    <div class="navbar-end">
                         <div class="dropdown">
                             <div
                                 tabindex="0"
@@ -140,6 +156,7 @@
                         </div>
                     </div>
                 </div>
-            </nav> 
+            </nav>
+        </header>
     </body>
 </html>
