--- a/index.html
+++ b/index.html
@@ -51,67 +51,71 @@
                             class="px-1 text-lg font-medium menu menu-horizontal"
                         >
                             <li
-                                class="transition duration-300 ease-in-out hover:text-primary"
+                                class="transition duration-300 ease-in-out text-stone-950"
                             >
                                 <a>Home</a>
                             </li>
                             <li
-                                class="transition duration-300 ease-in-out hover:text-primary"
+                                class="transition duration-300 ease-in-out text-stone-400"
                             >
                                 <a>Services</a>
                             </li>
                             <li
-                                class="transition duration-300 ease-in-out hover:text-primary"
+                                class="transition duration-300 ease-in-out text-stone-400"
                             >
                                 <a>Portfolio</a>
                             </li>
                             <li
-                                class="transition duration-300 ease-in-out hover:text-primary"
+                                class="transition duration-300 ease-in-out text-stone-400"
                             >
                                 <a>Blogs</a>
                             </li>
                             <li
-                                class="transition duration-300 ease-in-out hover:text-primary"
+                                class="transition duration-300 ease-in-out text-stone-400"
                             >
                                 <a>Contact Us</a>
                             </li>
                         </ul>
-                        <button class="btn btn-[#ffffff] btn-circle">
-                            <svg
-                                xmlns="http://www.w3.org/2000/svg"
-                                class="w-5 h-5"
-                                fill="none"
-                                viewBox="0 0 24 24"
-                                stroke="currentColor"
-                            >
-                                <path
-                                    stroke-linecap="round"
-                                    stroke-linejoin="round"
-                                    stroke-width="2"
-                                    d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
-                                />
-                            </svg>
-                        </button>
-                        <div class="flex items-center gap-5 text-lg">
-                            <button
-                                class="flex items-center gap-2 font-semibold text-gray-500"
-                            >
-                                <i
-                                    class="fa-solid fa-cart-shopping btn btn-[#ffffff] btn-circle m-3"
-                                ></i>
-                            </button>
-                            <button
-                                class="px-5 py-3 rounded-full text-black text-xl font-bold bg-[#ABEF5F]"
-                            >
-                                <span>Book Consult</span>
-                                <a
-                                    href="#"
-                                    class="text-white px-2 py-1 text-center bg-black rounded-full"
-                                    ><i
-                                        class="fa-solid fa-arrow-right -rotate-45"
+                        <div class="flex items-center pl-32">
+                            <div>
+                                <button class="btn btn-[#ffffff] btn-circle">
+                                    <svg
+                                        xmlns="http://www.w3.org/2000/svg"
+                                        class="w-5 h-5"
+                                        fill="none"
+                                        viewBox="0 0 24 24"
+                                        stroke="currentColor"
+                                    >
+                                        <path
+                                            stroke-linecap="round"
+                                            stroke-linejoin="round"
+                                            stroke-width="2"
+                                            d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"
+                                        />
+                                    </svg>
+                                </button>
+                            </div>
+                            <div class="flex items-center gap-5 text-lg">
+                                <button
+                                    class="flex items-center gap-2 font-semibold text-gray-500"
+                                >
+                                    <i
+                                        class="fa-solid fa-cart-shopping btn btn-[#ffffff] btn-circle m-3"
                                     ></i>
-                                </a>
-                            </button>
+                                </button>
+                                <button
+                                    class="px-5 py-3 rounded-full text-black text-xl font-bold bg-[#ABEF5F]"
+                                >
+                                    <span>Book Consult</span>
+                                    <a
+                                        href="#"
+                                        class="text-white px-2 py-1 text-center bg-black rounded-full"
+                                        ><i
+                                            class="fa-solid fa-arrow-right -rotate-45"
+                                        ></i>
+                                    </a>
+                                </button>
+                            </div>
                         </div>
                     </div>
                     <div class="navbar-end">
@@ -157,6 +161,37 @@
                     </div>
                 </div>
             </nav>
+            <!-- header end -->
+
+            <!-- banner start -->
+            <section class="w-11/12 mx-auto flex flex-col items-center py-5">
+                <div class="">
+                    <img src="./assets/banner.png" alt="banner image" />
+                </div>
+                <div class="text-center">
+                    <h1 class="text-6xl font-extrabold py-5">
+                        A barn house of this design has a <br />
+                        striking appearance
+                    </h1>
+                    <p class="py-5">
+                        The barn house is charming with its combination of
+                        rustic style and modern touch. It has old wood, sleek
+                        <br />
+                        metal features, and big windows that let in plenty of
+                        natural light.
+                    </p>
+                    <button
+                        class="px-5 py-3 rounded-full text-black text-xl font-medium bg-[#ABEF5F80]"
+                    >
+                        <span>View details</span>
+                        <a
+                            href="#"
+                            class="text-black px-2 py-1 text-center bg-[#ABEF5F] rounded-full"
+                            ><i class="fa-solid fa-arrow-right -rotate-45"></i>
+                        </a>
+                    </button>
+                </div>
+            </section>
         </header>
     </body>
 </html>
