--- a/index.html
+++ b/index.html
@@ -189,6 +189,7 @@
 
 			<!-- Reaction section end -->
 
+			<!-- Reaction section end -->
 			<!-- Work process start -->
 			<section class="w-10/12 mx-auto">
 				<div class="grid grid-cols-1 gap-5 rounded-xl">
@@ -236,7 +237,6 @@
 					</div>
 				</div>
 			</section>
-
 			<!-- Work process en -->
 		</main>
 	</body>
