--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 		<!-- tailwind and daisyUI cdn -->
 		<link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.14/dist/full.min.css" rel="stylesheet" type="text/css" />
 		<script src="https://cdn.tailwindcss.com"></script>
+		<link rel="stylesheet" href="./styles.css" />
 	</head>
 	<body class="bg-[#f4f4f4]">
 		<!-- header start -->
-		<header class="py-2 lg:py-24">
-			<nav class="w-10/12 mx-auto">
-				<div class="p-0 navbar">
+		<header class="w-11/12 py-2 mx-auto ">
+			<nav class="ms-24">
+				<div class="p-0 navbar ">
 					<div class="navbar-start">
 						<a href="#" class="mx-4 px-2 py-1 text-center bg-[#ABEF5F] rounded-full"><i class="-rotate-45 fa-solid fa-arrow-right"></i> </a>
 						<h3 class="text-3xl tracking-wider font-bold text-[#212121]">Rinterio</h3>
@@ -94,7 +95,7 @@
 			<!-- header end -->
 
 			<!-- banner start -->
-			<section class="w-10/12 mx-auto flex flex-col items-center my-2 bg-[#f9f9f9]">
+			<section class="flex flex-col items-center my-2  bg-[#f9f9f9] ms-36 ">
 				<div class="">
 					<img src="./assets/banner.png" alt="banner image" />
 				</div>
@@ -108,7 +109,7 @@
 						<br />
 						metal features, and big windows that let in plenty of natural light.
 					</p>
-					<button class="px-5 py-3 rounded-full text-black text-xl font-medium bg-[#ABEF5F80]">
+					<button class="px-20 py-3 my-5 mb-20 rounded-full text-black text-xl font-medium bg-[#ABEF5F80]">
 						<span>View details</span>
 						<a href="#" class="text-black px-2 py-1 text-center bg-[#ABEF5F] rounded-full"><i class="-rotate-45 fa-solid fa-arrow-right"></i> </a>
 					</button>
@@ -119,8 +120,8 @@
 
 		<!-- Liveable space -->
 		<main class="">
-			<img class="hidden ms-10 lg:block" src="./assets/Vector.png " alt="" />
-			<div class="flex flex-col items-center w-10/12 mx-auto lg:gap-10 lg:my-10 lg:flex-row">
+			<img class="hidden my-3 lg:block ms-4"  src="./assets/Vector.png " alt="" />
+			<div class="flex flex-col items-center w-11/12 mx-auto lg:gap-10 lg:my-10 lg:flex-row ">
 				<div class="flex-1 text-center lg:text-start">
 					<div class="py-10">
 						<button class="py-3 px-10 text-xl bg-[#ffffff] rounded-full"><i class="mx-2 fa-solid fa-arrow-right"></i><span>About US</span></button>
@@ -162,7 +163,7 @@
 			<!-- liveable space end -->
 
 			<!-- Reaction Section start -->
-			<section class="w-10/12 gap-10 my-10 mx-auto py-10 text-center rounded-xl bg-[#ffffff]">
+			<section class="gap-10 my-10 py-10 text-center rounded-xl bg-[#ffffff]">
 				<div class="flex flex-col items-center justify-around lg:flex-row">
 					<div>
 						<span><i class="text-4xl lg:text-5xl fa-regular fa-message"></i></span>
@@ -189,13 +190,13 @@
 
 			<!-- Reaction section end -->
 
-			<!-- Reaction section end -->
 			<!-- Work process start -->
-			<section class="w-10/12 mx-auto">
+
+			<section class="w-11/12 pb-5 mx-auto lg:mb-40">
 				<div class="grid grid-cols-1 gap-5 rounded-xl">
 					<div class="text-center">
-						<button class="py-2 px-10 text-xl bg-[#ffffff]"><i class="mx-2 fa-solid fa-arrow-right"></i><span>How We Works</span></button>
-						<h3 class="text-5xl font-bold">Our Works Process</h3>
+						<button class="py-2 px-10 text-xl bg-[#ffffff] rounded-full"><i class="mx-2 fa-solid fa-arrow-right"></i><span>How We Works</span></button>
+						<h3 class="py-5 text-5xl font-bold">Our Works Process</h3>
 						<p class="text-xl">
 							The barn house enchants with its combination of rustic appeal and contemporary elegance, <br />
 							showcasing aged wood alongside stylish metal details.
@@ -237,7 +238,81 @@
 					</div>
 				</div>
 			</section>
-			<!-- Work process en -->
+			<!-- Work process end -->
+
+			<!-- Latest portfolio start -->
+
+			<section class="  bg-[#ffffff] ">
+			<div class="grid w-11/12 grid-cols-1 gap-5 px-3 py-10 mx-auto my-10 sm:px-7 lg:my-24 lg:py-15">
+					<!-- section title -->
+					<div class="text-center">
+						<button class="py-2 px-10 text-xl bg-[#eefcdf] rounded-full"><i class="mx-2 fa-solid fa-arrow-right"></i><span>Explore our Latest works</span></button>
+						<h3 class="py-3 text-5xl font-bold">Our Latest Portfolio</h3>
+						<p class="pb-3 text-xl">
+							The barn house enchants with its combination of rustic appeal and <br> contemporary elegance,
+							showcasing aged wood alongside stylish <br> metal details.
+						</p>
+					</div>
+					<!-- section title end -->
+
+              <!-- Row-1 -->
+					<div class="grid grid-cols-1 gap-5 lg:grid-cols-6">
+						<div class="p-4 border-2 rounded-3xl lg:col-span-4 ">
+								 <div class="p-5 rounded-3xl bg-[#ffffff] grid grid-cols-1 gap-5 lg:grid-cols-2 items-center" >
+									 <div><img class="w-full h-full" src="./assets/img1.png" alt="" />
+									</div>
+											 <div>
+														<h3 class="text-2xl font-bold">Comercial</h3>
+															 <p>
+																		The barn house enchants with its combination of <br />
+																		 rustic appeal and contemporary elegance, showcasing <br />
+																		aged wood alongside stylish metal details.
+															 </p>
+															 <button class="px-5 py-3 text-xl font-medium text-black rounded-full">
+															<span>View details</span>
+															<a href="#" class="text-black px-2 py-1 text-center bg-[#ABEF5F] rounded-full"><i class="-rotate-45 fa-solid fa-arrow-right"></i> </a>
+															</button>
+										</div>
+								</div>
+						</div>
+
+
+						<div class="p-5 lg:col-span-2 border-2 rounded-3xl bg-[#ffffff]"><img class="w-full h-full" src="./assets/img2.png" alt="" /></div>
+						<div class="p-5 border-2 rounded-3xl lg:hidden bg-[#ffffff]"><img class="w-full h-full" src="./assets/img5.png" alt="" /></div>
+					</div>
+									 <!-- Row-1 end-->
+
+
+									 <!-- row-2  -->
+
+
+						 <div class="grid grid-cols-1 gap-5 lg:grid-cols-5">
+							<div class="p-5 border-2 rounded-3xl bg-[#ffffff] content-center order-2 lg:order-1"><img class="w-full h-full lg:h-[190px]" src="./assets/img3.png" alt="" /></div>
+
+								<div class="order-1 p-5 lg:order-2 lg:col-span-3">
+									<div class="p-4 border-2 rounded-3xl bg-[#ffffff] grid grid-cols-1 gap-5 lg:grid-cols-2 items-center">
+										<div><img class="w-full h-full lg:h-[190px]" src="./assets/img4.png" alt="" /></div>
+										<div>
+											<h3 class="text-2xl font-bold">Comercial</h3>
+											<p>
+												The barn house enchants with its combination of <br />
+												rustic appeal and contemporary elegance, showcasing <br />
+												aged wood alongside stylish metal details.
+											</p>
+											<button class="px-5 py-3 text-xl font-medium text-black rounded-full">
+												<span>View details</span>
+												<a href="#" class="text-black px-2 py-1 text-center bg-[#ABEF5F] rounded-full"><i class="-rotate-45 fa-solid fa-arrow-right"></i> </a>
+											</button>
+										</div>
+									</div>
+								</div>
+
+									<div class="p-5 border-2 rounded-3xl bg-[#ffffff] content-center order-3 lg:order-3"><img class="w-full h-full lg:h-[190px] " src="./assets/img5.png" alt="" /></div>
+						 </div>
+			</div>
+			</section>
+
+			<!-- Latest portfolio end -->
 		</main>
 	</body>
 </html>
