next project  end

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 	</head>
 	<body class="bg-[#f4f4f4]">
 		<!-- header start -->
-		<header class="w-11/12 py-2 mx-auto ">
+		<header class="w-11/12 py-2 mx-auto">
 			<nav class="ms-24">
-				<div class="p-0 navbar ">
+				<div class="p-0 navbar">
 					<div class="navbar-start">
 						<a href="#" class="mx-4 px-2 py-1 text-center bg-[#ABEF5F] rounded-full"><i class="-rotate-45 fa-solid fa-arrow-right"></i> </a>
 						<h3 class="text-3xl tracking-wider font-bold text-[#212121]">Rinterio</h3>
@@ -95,7 +95,7 @@
 			<!-- header end -->
 
 			<!-- banner start -->
-			<section class="flex flex-col items-center my-2  bg-[#f9f9f9] ms-36 ">
+			<section class="flex flex-col items-center my-2 bg-[#f9f9f9] ms-36">
 				<div class="">
 					<img src="./assets/banner.png" alt="banner image" />
 				</div>
@@ -120,8 +120,8 @@
 
 		<!-- Liveable space -->
 		<main class="">
-			<img class="hidden my-3 lg:block ms-4"  src="./assets/Vector.png " alt="" />
-			<div class="flex flex-col items-center w-11/12 mx-auto lg:gap-10 lg:my-10 lg:flex-row ">
+			<img class="hidden my-3 lg:block ms-4" src="./assets/Vector.png " alt="" />
+			<div class="flex flex-col items-center w-11/12 mx-auto lg:gap-10 lg:my-10 lg:flex-row">
 				<div class="flex-1 text-center lg:text-start">
 					<div class="py-10">
 						<button class="py-3 px-10 text-xl bg-[#ffffff] rounded-full"><i class="mx-2 fa-solid fa-arrow-right"></i><span>About US</span></button>
@@ -242,77 +242,231 @@
 
 			<!-- Latest portfolio start -->
 
-			<section class="  bg-[#ffffff] ">
-			<div class="grid w-11/12 grid-cols-1 gap-5 px-3 py-10 mx-auto my-10 sm:px-7 lg:my-24 lg:py-15">
+			<section class="bg-[#ffffff]">
+				<div class="grid w-11/12 grid-cols-1 gap-5 px-3 py-10 mx-auto my-10 sm:px-7 lg:my-24 lg:py-15">
 					<!-- section title -->
 					<div class="text-center">
 						<button class="py-2 px-10 text-xl bg-[#eefcdf] rounded-full"><i class="mx-2 fa-solid fa-arrow-right"></i><span>Explore our Latest works</span></button>
 						<h3 class="py-3 text-5xl font-bold">Our Latest Portfolio</h3>
 						<p class="pb-3 text-xl">
-							The barn house enchants with its combination of rustic appeal and <br> contemporary elegance,
-							showcasing aged wood alongside stylish <br> metal details.
+							The barn house enchants with its combination of rustic appeal and <br />
+							contemporary elegance, showcasing aged wood alongside stylish <br />
+							metal details.
 						</p>
 					</div>
 					<!-- section title end -->
 
-              <!-- Row-1 -->
+					<!-- Row-1 -->
 					<div class="grid grid-cols-1 gap-5 lg:grid-cols-6">
-						<div class="p-4 border-2 rounded-3xl lg:col-span-4 ">
-								 <div class="p-5 rounded-3xl bg-[#ffffff] grid grid-cols-1 gap-5 lg:grid-cols-2 items-center" >
-									 <div><img class="w-full h-full" src="./assets/img1.png" alt="" />
-									</div>
-											 <div>
-														<h3 class="text-2xl font-bold">Comercial</h3>
-															 <p>
-																		The barn house enchants with its combination of <br />
-																		 rustic appeal and contemporary elegance, showcasing <br />
-																		aged wood alongside stylish metal details.
-															 </p>
-															 <button class="px-5 py-3 text-xl font-medium text-black rounded-full">
-															<span>View details</span>
-															<a href="#" class="text-black px-2 py-1 text-center bg-[#ABEF5F] rounded-full"><i class="-rotate-45 fa-solid fa-arrow-right"></i> </a>
-															</button>
-										</div>
+						<div class="p-4 border-2 rounded-3xl lg:col-span-4">
+							<div class="p-5 rounded-3xl bg-[#ffffff] grid grid-cols-1 gap-5 lg:grid-cols-2 items-center">
+								<div><img class="w-full h-full" src="./assets/img1.png" alt="" /></div>
+								<div>
+									<h3 class="text-2xl font-bold">Comercial</h3>
+									<p>
+										The barn house enchants with its combination of <br />
+										rustic appeal and contemporary elegance, showcasing <br />
+										aged wood alongside stylish metal details.
+									</p>
+									<button class="px-5 py-3 text-xl font-medium text-black rounded-full">
+										<span>View details</span>
+										<a href="#" class="text-black px-2 py-1 text-center bg-[#ABEF5F] rounded-full"><i class="-rotate-45 fa-solid fa-arrow-right"></i> </a>
+									</button>
 								</div>
+							</div>
 						</div>
-
 
 						<div class="p-5 lg:col-span-2 border-2 rounded-3xl bg-[#ffffff]"><img class="w-full h-full" src="./assets/img2.png" alt="" /></div>
 						<div class="p-5 border-2 rounded-3xl lg:hidden bg-[#ffffff]"><img class="w-full h-full" src="./assets/img5.png" alt="" /></div>
 					</div>
-									 <!-- Row-1 end-->
+					<!-- Row-1 end-->
 
+					<!-- row-2  -->
 
-									 <!-- row-2  -->
+					<div class="grid grid-cols-1 gap-5 lg:grid-cols-5">
+						<div class="p-5 border-2 rounded-3xl bg-[#ffffff] content-center order-2 lg:order-1"><img class="w-full h-full lg:h-[190px]" src="./assets/img3.png" alt="" /></div>
 
-
-						 <div class="grid grid-cols-1 gap-5 lg:grid-cols-5">
-							<div class="p-5 border-2 rounded-3xl bg-[#ffffff] content-center order-2 lg:order-1"><img class="w-full h-full lg:h-[190px]" src="./assets/img3.png" alt="" /></div>
-
-								<div class="order-1 p-5 lg:order-2 lg:col-span-3">
-									<div class="p-4 border-2 rounded-3xl bg-[#ffffff] grid grid-cols-1 gap-5 lg:grid-cols-2 items-center">
-										<div><img class="w-full h-full lg:h-[190px]" src="./assets/img4.png" alt="" /></div>
-										<div>
-											<h3 class="text-2xl font-bold">Comercial</h3>
-											<p>
-												The barn house enchants with its combination of <br />
-												rustic appeal and contemporary elegance, showcasing <br />
-												aged wood alongside stylish metal details.
-											</p>
-											<button class="px-5 py-3 text-xl font-medium text-black rounded-full">
-												<span>View details</span>
-												<a href="#" class="text-black px-2 py-1 text-center bg-[#ABEF5F] rounded-full"><i class="-rotate-45 fa-solid fa-arrow-right"></i> </a>
-											</button>
-										</div>
-									</div>
+						<div class="order-1 p-5 lg:order-2 lg:col-span-3">
+							<div class="p-4 border-2 rounded-3xl bg-[#ffffff] grid grid-cols-1 gap-5 lg:grid-cols-2 items-center">
+								<div><img class="w-full h-full lg:h-[190px]" src="./assets/img4.png" alt="" /></div>
+								<div>
+									<h3 class="text-2xl font-bold">Comercial</h3>
+									<p>
+										The barn house enchants with its combination of <br />
+										rustic appeal and contemporary elegance, showcasing <br />
+										aged wood alongside stylish metal details.
+									</p>
+									<button class="px-5 py-3 text-xl font-medium text-black rounded-full">
+										<span>View details</span>
+										<a href="#" class="text-black px-2 py-1 text-center bg-[#ABEF5F] rounded-full"><i class="-rotate-45 fa-solid fa-arrow-right"></i> </a>
+									</button>
 								</div>
+							</div>
+						</div>
 
-									<div class="p-5 border-2 rounded-3xl bg-[#ffffff] content-center order-3 lg:order-3"><img class="w-full h-full lg:h-[190px] " src="./assets/img5.png" alt="" /></div>
-						 </div>
-			</div>
+						<div class="p-5 border-2 rounded-3xl bg-[#ffffff] content-center order-3 lg:order-3"><img class="w-full h-full lg:h-[190px]" src="./assets/img5.png" alt="" /></div>
+					</div>
+				</div>
 			</section>
 
 			<!-- Latest portfolio end -->
+
+			<!-- Artical section start-->
+
+			<section class="w-11/12 mx-auto">
+				<!-- section title -->
+				<div class="text-center">
+					<button class="py-2 px-10 text-xl bg-[#eefcdf] rounded-full"><i class="mx-2 fa-solid fa-arrow-right"></i><span>Rinterio News</span></button>
+					<h3 class="py-3 text-5xl font-bold">Read Our Articles and News</h3>
+					<p class="pb-3 text-xl">
+						The barn house enchants with its combination of rustic appeal and <br />
+						contemporary elegance, showcasing aged wood alongside stylish <br />
+						metal details.
+					</p>
+				</div>
+				<!-- section title end -->
+				<div class="grid grid-cols-1 gap-3 lg:grid-cols-3">
+					<div>
+						<div class="p-4 border-2 rounded-3xl lg:col-span-4">
+							<div class="p-5 rounded-3xl bg-[#ffffff] grid grid-cols-1 gap-5 items-center">
+								<div><img class="w-full h-full" src="./assets/article1.png" alt="" /></div>
+
+								<div>
+									<div class="flex gap-4">
+										<button class="flex items-center gap-2">
+											<i class="text-xl lg:ext-4xl fa-regular fa-calendar"></i>
+											<span class="text-sm lg:text-xl">July14,2024</span>
+										</button>
+										<button class="flex items-center gap-2">
+											<i class="text-xl lg:text-4xl fa-regular fa-user"></i>
+											<span class="text-sm lg:text-xl">By Admin</span>
+										</button>
+									</div>
+									<h3 class="my-3 text-2xl font-bold lg:text-3xl">How to choose the furniture right of your home.</h3>
+									<p class="text-base">
+										The barn house enchants with its combination of <br />
+										rustic appeal and contemporary elegance, showcasing <br />
+										aged wood alongside stylish metal details.
+									</p>
+									<button class="px-5 py-3 text-base text-black rounded-full lg:font-medium lg:text-xl">
+										<span>Read more</span>
+										<a href="#" class="text-black px-2 py-1 text-center bg-[#ABEF5F] rounded-full"><i class="-rotate-45 fa-solid fa-arrow-right"></i> </a>
+									</button>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="p-4 border-2 rounded-3xl lg:col-span-4">
+							<div class="p-5 rounded-3xl bg-[#ffffff] grid grid-cols-1 gap-5 items-center">
+								<div><img class="w-full h-full" src="./assets/article2.png" alt="" /></div>
+
+								<div>
+									<div class="flex gap-4">
+										<button class="flex items-center gap-2">
+											<i class="text-xl lg:ext-4xl fa-regular fa-calendar"></i>
+											<span class="text-sm lg:text-xl">July14,2024</span>
+										</button>
+										<button class="flex items-center gap-2">
+											<i class="text-xl lg:text-4xl fa-regular fa-user"></i>
+											<span class="text-sm lg:text-xl">By Admin</span>
+										</button>
+									</div>
+									<h3 class="my-3 text-2xl font-bold lg:text-3xl">How to choose the furniture right of your home.</h3>
+									<p class="text-base">
+										The barn house enchants with its combination of <br />
+										rustic appeal and contemporary elegance, showcasing <br />
+										aged wood alongside stylish metal details.
+									</p>
+									<button class="px-5 py-3 text-base text-black rounded-full lg:font-medium lg:text-xl">
+										<span>Read more</span>
+										<a href="#" class="text-black px-2 py-1 text-center bg-[#ABEF5F] rounded-full"><i class="-rotate-45 fa-solid fa-arrow-right"></i> </a>
+									</button>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div>
+						<div class="p-4 border-2 rounded-3xl lg:col-span-4">
+							<div class="p-5 rounded-3xl bg-[#ffffff] grid grid-cols-1 gap-5 items-center">
+								<div><img class="w-full h-full" src="./assets/article3.png" alt="" /></div>
+
+								<div>
+									<div class="flex gap-4">
+										<button class="flex items-center gap-2">
+											<i class="text-xl lg:ext-4xl fa-regular fa-calendar"></i>
+											<span class="text-sm lg:text-xl">July14,2024</span>
+										</button>
+										<button class="flex items-center gap-2">
+											<i class="text-xl lg:text-4xl fa-regular fa-user"></i>
+											<span class="text-sm lg:text-xl">By Admin</span>
+										</button>
+									</div>
+									<h3 class="my-3 text-2xl font-bold lg:text-3xl">How to choose the furniture right of your home.</h3>
+									<p class="text-base">
+										The barn house enchants with its combination of <br />
+										rustic appeal and contemporary elegance, showcasing <br />
+										aged wood alongside stylish metal details.
+									</p>
+									<button class="px-5 py-3 text-base text-black rounded-full lg:font-medium lg:text-xl">
+										<span>Read more</span>
+										<a href="#" class="text-black px-2 py-1 text-center bg-[#ABEF5F] rounded-full"><i class="-rotate-45 fa-solid fa-arrow-right"></i> </a>
+									</button>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<!-- Artical section end-->
+
+			<!-- Next project section -->
+
+			<section class="bg-[url('./assets/bg.jpg')] bg-cover bg-no-repeat my-10">
+				<!-- section title -->
+				<div class="grid w-9/12 grid-cols-1 gap-5 mx-auto">
+					<div class="mt-10 text-center">
+						<button class="py-2 px-10 text-xl bg-[#eefcdf] rounded-full"><i class="mx-2 fa-solid fa-arrow-right"></i><span>Let’s Connect</span></button>
+						<h3 class="py-3 text-5xl font-bold">Let’s Discuss Next Project</h3>
+						<p class="pb-3 text-xl">
+							The barn house enchants with its combination of rustic appeal and <br />
+							contemporary elegance, showcasing aged wood alongside stylish <br />
+							metal details.
+						</p>
+					</div>
+					<!-- section title end -->
+
+					<div class="grid grid-cols-1 gap-5 my-7">
+						<!-- input feild start -->
+						<div class="grid grid-cols-1 gap-5 lg:grid-cols-2">
+							<label class="flex items-center gap-2 input input-bordered rounded-3xl">
+								<input type="text" class="grow" placeholder="First Name*" />
+							</label>
+							<label class="flex items-center gap-2 input input-bordered rounded-3xl">
+								<input type="text" class="grow" placeholder="last Name*" />
+							</label>
+							<label class="flex items-center gap-2 input input-bordered rounded-3xl">
+								<input type="text" class="grow" placeholder="Phone Number*" />
+							</label>
+							<label class="flex items-center gap-2 input input-bordered rounded-3xl">
+								<input type="text" class="grow" placeholder="Email Number*" />
+							</label>
+						</div>
+
+						<div class="">
+							<textarea class="w-full p-3 rounded-3xl" placeholder="Write your masasge here " rows="8"></textarea>
+						</div>
+						<div>
+							<button class="px-5 py-3 w-full text-base text-black bg-[#ABEF5F] rounded-full lg:font-medium lg:text-xl">
+								<span>Read more</span>
+								<a href="#" class="px-2 py-1 text-center text-white bg-black rounded-full"><i class="-rotate-45 fa-solid fa-arrow-right"></i> </a>
+							</button>
+						</div>
+					</div>
+				</div>
+			</section>
+
+			<!-- Next project section end -->
 		</main>
 	</body>
 </html>
