--- a/index.html
+++ b/index.html
@@ -468,5 +468,54 @@
 
 			<!-- Next project section end -->
 		</main>
+
+
+				<!-- footer -->
+
+				<footer class="w-11/12 mx-auto bg-black h-96">
+
+						<div class="flex flex-col py-3 text-center">
+
+							<h3 ><a href="#" class="mx-4 px-2 py-1 text-center bg-[#ABEF5F] rounded-full"><i class="-rotate-45 fa-solid fa-arrow-right"></i> </a> <span class="text-3xl font-bold tracking-wider text-white">Rinterio</span></h3>
+							<p class="py-3 text-xl text-[#737373]">
+								The barn house enchants with its combination of rustic appeal and <br />
+								contemporary elegance, showcasing aged
+							</p>
+						</div>
+						<div class="">
+							<ul class="flex flex-col items-center px-1 text-lg text-[#E9E9E9] font-medium lg:justify-center lg:flex-row menu menu-horizontal">
+								<li class="transition duration-300 ease-in-out ">
+									<a>Home</a>
+								</li>
+								<li class="transition duration-300 ease-in-out ">
+									<a>Services</a>
+								</li>
+								<li class="transition duration-300 ease-in-out ">
+									<a>Portfolio</a>
+								</li>
+								<li class="transition duration-300 ease-in-out ">
+									<a>Blogs</a>
+								</li>
+								<li class="transition duration-300 ease-in-out">
+									<a>Contact Us</a>
+								</li>
+							</ul>
+
+						</div>
+
+
+							<div class="flex justify-center">
+
+								<button class="  px-5 py-3
+								 rounded-full text-black text-xl font-bold bg-[#ABEF5F]">
+									<span>Book Consult</span>
+									<a href="#" class="px-2 py-1 text-center text-white bg-black rounded-full"><i class="-rotate-45 fa-solid fa-arrow-right"></i> </a>
+								</button>
+							</div>
+
+<hr style="color: white; width: 80%;margin:3rem auto;">
+				</footer>
+
+
 	</body>
 </html>
